consultation-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f build-docker-compose.yml
    kompose.version: 1.34.0 (HEAD)
  labels:
    io.kompose.service: consultation
  name: consultation
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: consultation
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f build-docker-compose.yml
        kompose.version: 1.34.0 (HEAD)
      labels:
        io.kompose.service: consultation
    spec:
      containers:
        - args:
            - mvn
            - spring-boot:run
          image: adoptopenjdk/maven-openjdk11:latest
          name: consultation
          ports:
            - containerPort: 8083
              protocol: TCP
          volumeMounts:
            - mountPath: /usr/src
              name: consultation-cm0
            - mountPath: /root/.m2
              name: consultation-claim1
          workingDir: /usr/src
      restartPolicy: Always
      volumes:
        - configMap:
            name: consultation-cm0
          name: consultation-cm0
        - name: consultation-claim1
          persistentVolumeClaim:
            claimName: consultation-claim1
