interest-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f build-docker-compose.yml
    kompose.version: 1.34.0 (HEAD)
  labels:
    io.kompose.service: interest
  name: interest
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: interest
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f build-docker-compose.yml
        kompose.version: 1.34.0 (HEAD)
      labels:
        io.kompose.service: interest
    spec:
      containers:
        - args:
            - mvn
            - spring-boot:run
          image: adoptopenjdk/maven-openjdk11:latest
          name: interest
          ports:
            - containerPort: 8082
              protocol: TCP
          volumeMounts:
            - mountPath: /usr/src
              name: interest-cm0
            - mountPath: /root/.m2
              name: interest-claim1
          workingDir: /usr/src
      restartPolicy: Always
      volumes:
        - configMap:
            name: interest-cm0
          name: interest-cm0
        - name: interest-claim1
          persistentVolumeClaim:
            claimName: interest-claim1
