project-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f build-docker-compose.yml
    kompose.version: 1.34.0 (HEAD)
  labels:
    io.kompose.service: project
  name: project
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: project
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f build-docker-compose.yml
        kompose.version: 1.34.0 (HEAD)
      labels:
        io.kompose.service: project
    spec:
      containers:
        - args:
            - mvn
            - spring-boot:run
          image: adoptopenjdk/maven-openjdk11:latest
          name: project
          ports:
            - containerPort: 8084
              protocol: TCP
          volumeMounts:
            - mountPath: /usr/src
              name: project-cm0
            - mountPath: /root/.m2
              name: project-claim1
          workingDir: /usr/src
      restartPolicy: Always
      volumes:
        - configMap:
            name: project-cm0
          name: project-cm0
        - name: project-claim1
          persistentVolumeClaim:
            claimName: project-claim1
