interest-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f build-docker-compose.yml
    kompose.version: 1.34.0 (HEAD)
  labels:
    io.kompose.service: interest
  name: interest
spec:
  ports:
    - name: "8082"
      port: 8082
      targetPort: 8082
  selector:
    io.kompose.service: interest
