project-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f build-docker-compose.yml
    kompose.version: 1.34.0 (HEAD)
  labels:
    io.kompose.service: project
  name: project
spec:
  ports:
    - name: "8084"
      port: 8084
      targetPort: 8084
  selector:
    io.kompose.service: project
