salesmanmatch-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f build-docker-compose.yml
    kompose.version: 1.34.0 (HEAD)
  labels:
    io.kompose.service: salesmanmatch
  name: salesmanmatch
spec:
  ports:
    - name: "8085"
      port: 8085
      targetPort: 8085
  selector:
    io.kompose.service: salesmanmatch
