ingress.yaml
apiVersion: networking.k8s.io/v1
kind: "Ingress"
metadata: 
  name: "shopping-ingress"
  annotations: 
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    ingressclass.kubernetes.io/is-default-class: "true"
spec: 
  ingressClassName: nginx
  rules: 
    - host: ""
      http: 
        paths: 
          - path: /projects
            pathType: Prefix
            backend: 
              service:
                name: project
                port:
                  number: 8080
          # - path: /deliveries
          #   pathType: Prefix
          #   backend: 
          #     service:
          #       name: delivery
          #       port:
          #         number: 8080
          # - path: /products
          #   pathType: Prefix
          #   backend: 
          #     service:
          #       name: product
          #       port:
          #         number: 8080
